Refactoring: rename variables and endpoints
