# gen/grpc/get_changes_by_periods/server/types.go
@@ -1,0 +1,90 @@
+// Code generated by goa v3.18.2, DO NOT EDIT.
+//
+// get changes by periods gRPC server types
+//
+// Command:
+// $ goa gen go-scores/design
+
+package server
+
+import (
+	getchangesbyperiods "go-scores/gen/get_changes_by_periods"
+	get_changes_by_periodspb "go-scores/gen/grpc/get_changes_by_periods/pb"
+)
+
+// NewGetChangesByPeriodsPayload builds the payload of the
+// "getChangesByPeriods" endpoint of the "get changes by periods" service from
+// the gRPC request type.
+func NewGetChangesByPeriodsPayload(message *get_changes_by_periodspb.GetChangesByPeriodsRequest) *getchangesbyperiods.GetChangesByPeriodsPayload {
+	v := &getchangesbyperiods.GetChangesByPeriodsPayload{
+		Period: message.Period,
+	}
+	return v
+}
+
+// NewProtoGetChangesByPeriodsResponse builds the gRPC response type from the
+// result of the "getChangesByPeriods" endpoint of the "get changes by periods"
+// service.
+func NewProtoGetChangesByPeriodsResponse(result *getchangesbyperiods.GetChangesByPeriodsResult) *get_changes_by_periodspb.GetChangesByPeriodsResponse {
+	message := &get_changes_by_periodspb.GetChangesByPeriodsResponse{}
+	if result.Meta != nil {
+		message.Meta = svcGetchangesbyperiodsPeriodsMetaToGetChangesByPeriodspbPeriodsMeta(result.Meta)
+	}
+	if result.Data != nil {
+		message.Data = make([]*get_changes_by_periodspb.PeriodScoreChange, len(result.Data))
+		for i, val := range result.Data {
+			message.Data[i] = &get_changes_by_periodspb.PeriodScoreChange{
+				ScoreDiff: val.ScoreDiff,
+			}
+			if val.PeriodID != nil {
+				periodID := int32(*val.PeriodID)
+				message.Data[i].PeriodId = &periodID
+			}
+		}
+	}
+	return message
+}
+
+// svcGetchangesbyperiodsPeriodsMetaToGetChangesByPeriodspbPeriodsMeta builds a
+// value of type *get_changes_by_periodspb.PeriodsMeta from a value of type
+// *getchangesbyperiods.PeriodsMeta.
+func svcGetchangesbyperiodsPeriodsMetaToGetChangesByPeriodspbPeriodsMeta(v *getchangesbyperiods.PeriodsMeta) *get_changes_by_periodspb.PeriodsMeta {
+	res := &get_changes_by_periodspb.PeriodsMeta{}
+	if v.Periods != nil {
+		res.Periods = make([]*get_changes_by_periodspb.Period, len(v.Periods))
+		for i, val := range v.Periods {
+			res.Periods[i] = &get_changes_by_periodspb.Period{
+				Start: val.Start,
+				End:   val.End,
+			}
+			if val.ID != nil {
+				id := int32(*val.ID)
+				res.Periods[i].Id = &id
+			}
+		}
+	}
+
+	return res
+}
+
+// protobufGetChangesByPeriodspbPeriodsMetaToGetchangesbyperiodsPeriodsMeta
+// builds a value of type *getchangesbyperiods.PeriodsMeta from a value of type
+// *get_changes_by_periodspb.PeriodsMeta.
+func protobufGetChangesByPeriodspbPeriodsMetaToGetchangesbyperiodsPeriodsMeta(v *get_changes_by_periodspb.PeriodsMeta) *getchangesbyperiods.PeriodsMeta {
+	res := &getchangesbyperiods.PeriodsMeta{}
+	if v.Periods != nil {
+		res.Periods = make([]*getchangesbyperiods.Period, len(v.Periods))
+		for i, val := range v.Periods {
+			res.Periods[i] = &getchangesbyperiods.Period{
+				Start: val.Start,
+				End:   val.End,
+			}
+			if val.Id != nil {
+				id := int(*val.Id)
+				res.Periods[i].ID = &id
+			}
+		}
+	}
+
+	return res
+}
