# gen/http/get_by_periods/server/server.go
@@ -1,128 +1,0 @@
-// Code generated by goa v3.18.2, DO NOT EDIT.
-//
-// get by periods HTTP server
-//
-// Command:
-// $ goa gen go-scores/design
-
-package server
-
-import (
-	"context"
-	getbyperiods "go-scores/gen/get_by_periods"
-	"net/http"
-
-	goahttp "goa.design/goa/v3/http"
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Server lists the get by periods service endpoint HTTP handlers.
-type Server struct {
-	Mounts       []*MountPoint
-	GetByPeriods http.Handler
-}
-
-// MountPoint holds information about the mounted endpoints.
-type MountPoint struct {
-	// Method is the name of the service method served by the mounted HTTP handler.
-	Method string
-	// Verb is the HTTP method used to match requests to the mounted handler.
-	Verb string
-	// Pattern is the HTTP request path pattern used to match requests to the
-	// mounted handler.
-	Pattern string
-}
-
-// New instantiates HTTP handlers for all the get by periods service endpoints
-// using the provided encoder and decoder. The handlers are mounted on the
-// given mux using the HTTP verb and path defined in the design. errhandler is
-// called whenever a response fails to be encoded. formatter is used to format
-// errors returned by the service methods prior to encoding. Both errhandler
-// and formatter are optional and can be nil.
-func New(
-	e *getbyperiods.Endpoints,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) *Server {
-	return &Server{
-		Mounts: []*MountPoint{
-			{"GetByPeriods", "GET", "/periods/{period}"},
-		},
-		GetByPeriods: NewGetByPeriodsHandler(e.GetByPeriods, mux, decoder, encoder, errhandler, formatter),
-	}
-}
-
-// Service returns the name of the service served.
-func (s *Server) Service() string { return "get by periods" }
-
-// Use wraps the server handlers with the given middleware.
-func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.GetByPeriods = m(s.GetByPeriods)
-}
-
-// MethodNames returns the methods served.
-func (s *Server) MethodNames() []string { return getbyperiods.MethodNames[:] }
-
-// Mount configures the mux to serve the get by periods endpoints.
-func Mount(mux goahttp.Muxer, h *Server) {
-	MountGetByPeriodsHandler(mux, h.GetByPeriods)
-}
-
-// Mount configures the mux to serve the get by periods endpoints.
-func (s *Server) Mount(mux goahttp.Muxer) {
-	Mount(mux, s)
-}
-
-// MountGetByPeriodsHandler configures the mux to serve the "get by periods"
-// service "getByPeriods" endpoint.
-func MountGetByPeriodsHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/periods/{period}", f)
-}
-
-// NewGetByPeriodsHandler creates a HTTP handler which loads the HTTP request
-// and calls the "get by periods" service "getByPeriods" endpoint.
-func NewGetByPeriodsHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeGetByPeriodsRequest(mux, decoder)
-		encodeResponse = EncodeGetByPeriodsResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "getByPeriods")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "get by periods")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
