# gen/http/get_by_periods/server/types.go
@@ -1,65 +1,0 @@
-// Code generated by goa v3.18.2, DO NOT EDIT.
-//
-// get by periods HTTP server types
-//
-// Command:
-// $ goa gen go-scores/design
-
-package server
-
-import (
-	getbyperiods "go-scores/gen/get_by_periods"
-)
-
-// GetByPeriodsResponseBody is the type of the "get by periods" service
-// "getByPeriods" endpoint HTTP response body.
-type GetByPeriodsResponseBody struct {
-	Meta *PeriodsMetaResponseBody         `form:"meta" json:"meta" xml:"meta"`
-	Data []*PeriodScoreChangeResponseBody `form:"data" json:"data" xml:"data"`
-}
-
-// PeriodsMetaResponseBody is used to define fields on response body types.
-type PeriodsMetaResponseBody struct {
-	Periods []*PeriodResponseBody `form:"periods,omitempty" json:"periods,omitempty" xml:"periods,omitempty"`
-}
-
-// PeriodResponseBody is used to define fields on response body types.
-type PeriodResponseBody struct {
-	ID    *int   `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
-	Start *int64 `form:"start,omitempty" json:"start,omitempty" xml:"start,omitempty"`
-	End   *int64 `form:"end,omitempty" json:"end,omitempty" xml:"end,omitempty"`
-}
-
-// PeriodScoreChangeResponseBody is used to define fields on response body
-// types.
-type PeriodScoreChangeResponseBody struct {
-	PeriodID  *int     `form:"period_id,omitempty" json:"period_id,omitempty" xml:"period_id,omitempty"`
-	ScoreDiff *float32 `form:"score_diff,omitempty" json:"score_diff,omitempty" xml:"score_diff,omitempty"`
-}
-
-// NewGetByPeriodsResponseBody builds the HTTP response body from the result of
-// the "getByPeriods" endpoint of the "get by periods" service.
-func NewGetByPeriodsResponseBody(res *getbyperiods.GetByPeriodsResult) *GetByPeriodsResponseBody {
-	body := &GetByPeriodsResponseBody{}
-	if res.Meta != nil {
-		body.Meta = marshalGetbyperiodsPeriodsMetaToPeriodsMetaResponseBody(res.Meta)
-	}
-	if res.Data != nil {
-		body.Data = make([]*PeriodScoreChangeResponseBody, len(res.Data))
-		for i, val := range res.Data {
-			body.Data[i] = marshalGetbyperiodsPeriodScoreChangeToPeriodScoreChangeResponseBody(val)
-		}
-	} else {
-		body.Data = []*PeriodScoreChangeResponseBody{}
-	}
-	return body
-}
-
-// NewGetByPeriodsPayload builds a get by periods service getByPeriods endpoint
-// payload.
-func NewGetByPeriodsPayload(period string) *getbyperiods.GetByPeriodsPayload {
-	v := &getbyperiods.GetByPeriodsPayload{}
-	v.Period = period
-
-	return v
-}
